dodat slucaj reklamacija

--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -77,5 +77,25 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\end{enumerate}
 \end{description}
 
+\subsection{Reklamacija}
 
+\begin{description}
+  \item[$\ast$ Kratak opis: ] Kupac mo\v ze reklamirati kupljenu kartu na \v salteru. Ukoliko nije prekasno, slu\v zbenik na \v salteru preuzima kartu i osloba\dj a mesto u sistemu i zatim vraca novac korisniku.
+  \item[$\ast$ U\v cesnici: ] Kupac i slu\v zbenik na \v salteru
+  \item[$\ast$ Preduslovi: ] Kupac ima va\v ze\'cu kartu i do polaska autobusa ima barem sat vremena
+  \item[$\ast$ Postuslovi: ] Kupac je vratio kartu i dobio novac natrag
+  \item[$\ast$ Osnovni tok: ] \ \\
+  \begin{enumerate}
+    \item Kupac dolazi na \v salter i obave\v stava slu\v zbenika o nameri da vrati kartu
+    \item Slu\v zbenik proverava da li su ispunjeni uslovi za reklamaciju
+    \item Ukoliko su uslovi ispunjeni, slu\v zbenik preuzima kartu
+    \item Slu\v zbenik poni\v stava kartu i osloba\dj a mesto u sistemu
+    \item Slu\v zbenik vra\'ca novac kupcu
+  \end{enumerate}
+  \item[$\ast$ Alternativni tok]
+  \begin{enumerate}
+    \item[3a. ]  Ukoliko uslovi nisu ispunjeni, slu\v zbenik obavestava kupca
+  \end{enumerate}
+  
+\end{description}
 
