Dodata rezervacija mesta online i rezervacija telefonom

--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -69,6 +69,51 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	
 \end{description}
 \newpage
+\subsection{Online rezervacija mesta}
+\begin{description}
+	\item [$\ast$ Kratak opis: ] Putem veb stranice na\v seg informacionog sistema, kupac na osnovu postoje\' ce karte(povratne) mo\v ze izvr\v siti rezervaciju mesta za povratak na \v zeljeni datum, u \v zeljeno vreme.
+	\item[$\ast$ U\v cesnici: ] Kupac.
+	\item[$\ast$ Preduslovi: ] Pristup internetu.
+	\item[$\ast$ Postuslovi: ] Rezervacija mesta uspe\v sno poslata u sistem.
+	\item[$\ast$ Osnovni tok: ] \ \\
+	\renewcommand{\labelenumii}{\Roman{enumii}}
+	\begin{enumerate}
+		\item Kupac pristupa online sajtu autobuske stanice.
+		\item Informi\v se se o dostupnim terminima i redovima vo\v znje za \v zeljeni datum i vreme.
+		\item Popunjava formu za rezervaciju mesta, informacije koje su neophodne za rezervaciju mesta kao \v sto su: datum, vreme, prevoznik (ukoliko za zadati datum i vreme imamo vi\v se prevoznika) i broj mobilnog telefona.
+		\item Sistem vr\v si proveru da li su uneti podaci validni.
+		\item Rezervacija mesta se pamti u sistem.
+		\item Sistem izbacuje poruku kojom obave\v stava kupca o uspe\v snoj ili neuspe\v snoj rezervaciji i u slu\v caju uspe\v sne rezervacije \v salje identifikacioni kod na uneti broj mobilnog telefona.
+	\end{enumerate}
+	\item[$\ast$ Alternativni tok: ]
+	\begin{enumerate}
+	\item[4a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\' com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se oslve\v zava
+	\end{enumerate}
+\end{description}
+\newpage
+\subsection{Rezervacija mesta/karte telefonom}
+\begin{description}
+	\item [$\ast$ Kratak opis: ] Kupac ima mogu\' cnost da rezervaciju mesta ili karte obavi i putem telefona.
+	\item[$\ast$ U\v cesnici: ] Kupac i slu\v zbenik.
+	\item[$\ast$ Preduslovi: ]
+	\item[$\ast$ Osnovni tok: ] \ \\
+	\renewcommand{\labelenumii}{\Roman{enumii}}
+	\begin{enumerate}
+		\item Kupac poziva broj za rezervacije(mesta/karte).
+		\item Slu\v zbenik se javlja i od kupca trazi neophodne informacije: da li je u pitanju rezervacija mesta ili karte, datum polaska i vreme polaska.
+		\item U slu\v caju da za iskazani datum i vreme polaska ima vi\v se prevoznika slu\v zbenik naknadno pita kupca kog prevoznika bira.
+		\item Kupac bira prevoznika i informacije kompletira brojem telefona.
+		\item Sve prethodne podatke slu\v zbenik unosi u sistem.
+		\item Sistem vr\v si proveru unetih podataka.
+		\item Rezervacija se pamti u sistem.
+		\item Sistem izbacuje poruku kojom obave\v stava kupca o uspe\v snoj ili neuspe\v snoj rezervaciji i u slu\v caju uspe\v sne rezervacije \v salje identifikacioni kod na uneti broj mobilnog telefona.		
+	\end{enumerate}
+	\item[$\ast$ Alternativni tok: ]
+	\begin{enumerate}
+		\item[6a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\' com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se oslve\v zava.
+	\end{enumerate}
+\end{description}	
+\newpage
 \subsection{Kupovina karte}
 \subsubsection{Kupovina ako karta nije unapred rezervisana}
 \begin{description}
@@ -83,16 +128,75 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 		\item Kupac se izja\v snjava za vreme polaska i \v zeljenog prevoznika (ukoliko vi\v se prevoznika polazi u isto vreme).
 		\item Slu\v zbenik unosi date podatke u sistem.
 		\item Sistem proverava da li ima slobodnog mesta u tom terminu.
-		\item Ukoliko nema slobodnog mesta, a vozilo jo\v s uvek nije postavljeno na peron, sistem proverava da li dati prevoznik ima resurse da zameni teku\'ce vozilo vozilom ve\'ceg kapaciteta ili da uvede dodatno vozilo.
-		\item Ukoliko nema mesta i prevoznik nema odgovaraju\'ce dodatne resurse, sistem daje obave\v stenje da nema mesta, a zatim slu\v zbenik to saop\v stava kupcu i kupovina se smatra neuspe\v snom.
-		\item Ukoliko ima slobodnog mesta ili prevoznik na raspolaganju ima potrebne resurse, sistem daje obave\v stenje da je kupovinu mogu\'ce izvr\v siti.
-		\item Slu\v zbenik saop\v stava kupcu da ima mesta u autobusu.
+		\item Ako nema mesta kupovina se smatra neuspe\v snom.
+		\item Ina\v ce, slu\v zbenik saop\v stava kupcu da ima slobodnog mesta.
 		\item Kupac potvrdjuje da \v zeli da kupi kartu i nagla\v sava da li \v zeli kartu u jednom smeru ili povratnu.
 		\item Ukoliko kupac ima pravo na neki od popusta, saop\v stava to slu\v zbeniku i pokazuje odgovaraju\'ca dokumenta kao dokaz.
 		\item Slu\v zbenik unosi podatke o popustu i podatke da li je karta povratna ili u jednom smeru.
 		\item Sistem \v stampa kartu.
 		\item Kupac pla\' ca kartu.
 		\item Slu\v zbenik uzima novac i daje kartu kupcu tako da se kupovina smatra uspe\v snom.
+	\end{enumerate}
+\end{description}
+
+\subsubsection{Kupovina mesta ako nije unapred rezervisano}
+\begin{description}
+	\item[$\ast$ Kratak opis: ] Kupac, koji ima povratnu kartu, na \v salteru kupuje mesto za odredjeni termin. Slu\v zbenik na \v salteru unosi podatke u sistem i na karti potvrdjuje mesto i vreme.
+	\item[$\ast$ U\v cesnici: ] Kupac i slu\v zbenik na \v salteru.
+	\item[$\ast$ Preduslovi: ] Kupac ima povratnu kartu.
+	\item[$\ast$ Postuslovi: ] Potvrdjena je kupovina mesta u sistemu.
+	\item[$\ast$ Tok: ] \ \\
+	\begin{enumerate}
+		\item Kupac dolazi na \v salter.
+		\item Zatra\v zi informacije o vremenima polazaka za odgovaraju\'ceg prevoznika za odredjeni datum (ako to vec nije ranije u\v cinjeno).
+		\item Slu\v zbenik na \v salteru mu daje \v zeljene informacije
+		\item Kupac se izja\v snjava za \v zeljeni termin.
+		\item Slu\v zbenik unosi odgovaraju\'ce podatke u sistem.
+		\item Sistem proverava da li ima slobodnog mesta u datom terminu.
+		\item Ako nema mesta kupovina se smatra neuspe\v snom.
+		\item Ina\v ce, slu\v zbenik saop\v stava kupcu da ima slobodnog mesta.
+		\item Kupac potvrdjuje da li \v zeli da putuje u tom terminu i prila\v ze kartu.
+		\item Slu\v zbenik unosi u sistem da kupac \v zeli da putuje.
+		\item Sistem mu daje podatak o broju sedi\v sta.
+		\item Slu\v zbenik na karti zapisuje broj sedi\v sta, datum i termin putovanja.
+		\item Kupac pla\'ca mesto.
+		\item Slu\v zbenik uzima novac i vra\'ca kupcu kartu.
+	\end{enumerate}
+\end{description}
+
+\subsubsection{Kupovina unapred rezervisane karte}
+\begin{description}
+	\item[$\ast$ Kratak opis: ] Kupac je unapred rezervisao kartu i dolazi na salter da je preuzme.
+	\item[$\ast$ U\v cesnici: ] Kupac i slu\v zbenik na \v salteru.
+	\item[$\ast$ Preduslovi: ] Kupac je rezervisao kartu za odredjeni termin i odredjenog prevoznika.
+	\item[$\ast$ Postuslovi: ] Kupac je dobio papirnu kartu.
+	\item[$\ast$ Tok: ] \ \\
+	\begin{enumerate}
+		\item Kupac dolazi na \v salter.
+		\item Saop\v stava slu\v zbeniku da je rezervisao kartu i saop\v stava/pokazuje identifikacioni kod koji je dobio prilikom rezervacije
+		\item Slu\v zbenik unosi identifikacioni kod u sistem i tako potvrdjuje kupovinu karte.
+		\item Sistem \v cekira da je rezervisana karta preuzeta.
+		\item Sistem \v stampa kartu.
+		\item Kupac pla\'ca kartu.
+		\item Slu\v zbenik uzima novac i daje kartu.
+	\end{enumerate}
+\end{description}
+
+\subsubsection{Kupovina unapred rezervisanog mesta}
+\begin{description}
+	\item[$\ast$ Kratak opis: ] Kupac je unapred rezervisao mesto i dolazi na salter da potvrdi.
+	\item[$\ast$ U\v cesnici: ] Kupac i slu\v zbenik na \v salteru.
+	\item[$\ast$ Preduslovi: ] Kupac ima povratnu kartu i rezervisao je mesto za odredjeni termin kod odgovarajuceg prevoznika.
+	\item[$\ast$ Postuslovi: ] Kupac je dobio mesto u autobusu.
+	\item[$\ast$ Tok: ] \ \\
+	\begin{enumerate}
+		\item Kupac dolazi na \v salter.
+		\item Saop\v stava slu\v zbeniku da ima rezervisano mesto, saop\v stava/pokazuje identifikacioni kod koji je dobio prilikom rezervacije i prila\v ze kartu
+		\item Slu\v zbenik unosi identifikacioni kod u sistem i tako potvrdjuje kupovinu mesta.
+		\item Sistem \v cekira da je rezervisano mesto preuzeto.
+		\item Slu\v zbenik na karti bele\v zi broj sedi\v sta, vreme i datum putovanja.
+		\item Kupac pla\'ca kartu.
+		\item Slu\v zbenik uzima novac i vra\'ca kartu kupcu.
 	\end{enumerate}
 \end{description}
 
@@ -118,3 +222,16 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
   
 \end{description}
 
+\subsection{Alokacija dodatnih resursa}
+\begin{description}
+	\item[$\ast$ Kratak opis: ] U slu\v caju da su sva mesta popunjena, sistem obave\v stava predstavnika prevozni\v cke agencije da je potrebno jo\v s resursa. 
+	\item[$\ast$ U\v cesnici: ] Predstavnik agencije.
+	\item[$\ast$ Preduslovi: ] Nema vi\v se mesta u trenutno rasporedjenim autobusima.
+	\item[$\ast$ Postuslovi: ] Povratna informacija da li prevoznik ima odgovaraju\'ce raspolo\v zive resurse.
+	\item[$\ast$ Tok: ] \ \\
+	\begin{enumerate}
+		\item Sistem obave\v stava predstavnika prevozni\v cke agencije da su potrebni dodatni resursi.
+		\item Predstavnik agencije mu \v salje odgovor da li mo\v ze da zameni teku\'ce vozilo vozilom ve\'ceg kapaciteta ili da uvede dodatno.
+		\item Ukoliko postoje odgovaraju\'ci resursi, bele\v ze se podaci o njima u sistem.
+	\end{enumerate}
+\end{description}
