dijagram aktivnosti - kupovina

--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -139,6 +139,13 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\end{enumerate}
 \end{description}
 
+\begin{figure}[!htb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{"../Slike/kupovina"}
+	\caption{Dijagram aktivnosti - kupovina nerezervisane karte}
+	\label{fig:dijagram-aktivnosti}
+\end{figure}
+
 \subsubsection{Kupovina mesta ako nije unapred rezervisano}
 \begin{description}
 	\item[$\ast$ Kratak opis: ] Kupac, koji ima povratnu kartu, na \v salteru kupuje mesto za odredjeni termin. Slu\v zbenik na \v salteru unosi podatke u sistem i na karti potvrdjuje mesto i vreme.
