dijagram aktivnosti - rezervisanje telefonom

--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -112,7 +112,13 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\begin{enumerate}
 		\item[6a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\' com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se oslve\v zava.
 	\end{enumerate}
-\end{description}	
+\end{description}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{../Slike/rezervacijaTelefonom}
+	\caption{}
+	\label{fig:rezervacijatelefonom}
+\end{figure}	
 \newpage
 \subsection{Kupovina karte}
 \subsubsection{Kupovina ako karta nije unapred rezervisana}
