--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -116,7 +116,7 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{../Slike/rezervacijaTelefonom}
-	\caption{}
+	\caption{Dijagram aktivnosti - rezervacija telefonom}
 	\label{fig:rezervacijatelefonom}
 \end{figure}	
 \newpage
